# GIG-inc

./: .gitignore  giginc.drawio  podman.yml  processes.exs
backend/: Cargo.toml  (+2 more)
backend/auth_service/: .env  Cargo.toml  Dockerfile  build.rs
backend/auth_service/src/: main.rs  state.rs
backend/auth_service/src/config/: config.rs
backend/auth_service/src/db/: connections.rs
backend/auth_service/src/grpc/: grpc_server.rs  login_handler.rs  logout_handler.rs  mod.rs  password_reset_handler.rs  profile_handler.rs  refresh_handler.rs  signup_handler.rs  update_handler.rs  verify_handler.rs
backend/auth_service/src/handlers/: login_handler.rs  logout_handler.rs  mod.rs  password_reset_handler.rs  profile_handler.rs  refresh_session_handler.rs  signup_handler.rs  update_user_handler.rs  verify_session_handler.rs
backend/auth_service/src/models/: auth_models.rs  mod.rs  supabase_client.rs
backend/auth_service/src/routes/: auth_routes.rs  main_router.rs
backend/auth_service/src/services/: login_service.rs  logout_service.rs  mod.rs  password_reset_service.rs  profile_service.rs  refresh_session_service.rs  signup_service.rs  update_user_service.rs  verify_session_service.rs
backend/auth_service/src/utilis/: error.rs  mod.rs  supabase_client.rs
backend/bank_service/: Cargo.toml  Dockerfile  build.rs
backend/bank_service/src/: main.rs
backend/bank_service/src/api/: deposit_api.rs  mod.rs  withdraw_api.rs
backend/bank_service/src/grpc/: deposit_handler.rs  grpc_server.rs  mod.rs  mpesa_withdraw_handler.rs
backend/bank_service/src/services/: deposit_service.rs  mod.rs  mpesa_withdraw_service.rs
backend/payments_service/: Cargo.toml  Dockerfile  build.rs
backend/payments_service/src/: main.rs  state.rs
backend/payments_service/src/apis/: mod.rs  mpesa_access_life.rs  mpesa_stk_callback.rs  mpesa_stk_callback_handler.rs  mpesa_stk_push.rs
backend/payments_service/src/apis/daraja_business_to_customer/: daraja_b2c.rs  daraja_b2c_callback.rs  mod.rs
backend/payments_service/src/apis/daraja_customer_to_business/: daraja_c2b.rs  daraja_c2b_callback.rs  mod.rs
backend/payments_service/src/apis/daraja_stk_push/: daraja_stk_callback.rs  daraja_stk_push.rs  mod.rs  mpesa_stk_callback.rs  mpesa_stk_callback_handler.rs  mpesa_stk_push.rs
backend/payments_service/src/auth/: mod.rs  mpesa_access_life.rs  mpesa_auth.rs
backend/payments_service/src/config/: config.rs
backend/payments_service/src/grpc/: grpc_service.rs  mod.rs  mpesa_service.rs
backend/payments_service/src/router/: http.rs  router.rs
backend/r_internal_service/: Cargo.toml  Dockerfile  build.rs
backend/r_internal_service/src/: main.rs
backend/r_internal_service/src/config/: config.rs
backend/r_internal_service/src/grpc/: auth_client.rs  mod.rs
backend/r_internal_service/src/http/: auth.rs
backend/r_internal_service/src/router/: auth_routes.rs  main_router.rs  mod.rs
(+847 files in other folders)
