[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "rust_decimal", "chrono", "uuid"] }
anyhow = "1.0.100"
tracing = "0.1.41"
axum = "0.8.6"
tracing-subscriber = "0.3.20"
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.13"
