[package]
name = "bank_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13", features = ["transport"] }
uuid = { version = "1.18.1", features = ["v4"] }
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1.89"
anyhow = "1.0.100"

[build-dependencies]
tonic-build = "0.13"
