[package]
name = "payments_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
base64 = "0.22"
chrono = "0.4.42"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.13"