[package]
name = "r_internal_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id"]  }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-build = "0.13"